--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
 
   <main class="container">
 
-    <div class="page-header">
-      <h1 class="page-header__title">FAQs</h1>
+    <div class="accordion">
+      <object data="./assets/images/icon-star.svg" type="image/svg+xml"></object>
+      <h1 class="accordion-title">FAQs</h1>
     </div>
 
     <section class="faq">
-      <h2 class="faq-question">What is Frontend Mentor, and how will it help me?</h2>
+      <div class=" faq-display">
+        <h2 class="faq-question">What is Frontend Mentor, and how will it help me?</h2>
+        <object data="./assets/images/icon-plus.svg" type="image/svg+xml"></object>
+      </div>
       <p class="faq-answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
         frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
         all levels and ideal for portfolio building.</p>
