--- a/index.html
+++ b/index.html
@@ -20,30 +20,39 @@
       <h1 class="accordion-title">FAQs</h1>
     </div>
 
-    <section class="faq">
+    <section class="faq faq-border">
       <div class=" faq-display">
         <h2 class="faq-question">What is Frontend Mentor, and how will it help me?</h2>
-        <object data="./assets/images/icon-plus.svg" type="image/svg+xml"></object>
+        <object class="faq-btn" data="./assets/images/icon-plus.svg" type="image/svg+xml"></object>
       </div>
       <p class="faq-answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
         frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
         all levels and ideal for portfolio building.</p>
     </section>
 
-    <section class="faq">
-      <h2 class="faq-question">Is Frontend Mentor free?</h2>
+    <section class="faq faq-border">
+      <div class=" faq-display">
+        <h2 class="faq-question">Is Frontend Mentor free?</h2>
+        <object class="faq-btn" data="./assets/images/icon-plus.svg" type="image/svg+xml"></object>
+      </div>  
       <p class="faq-answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
         option providing access to a range of projects suitable for all skill levels.</p>
     </section>
 
-    <section class="faq">
-      <h2 class="faq-question">Can I use Frontend Mentor projects in my portfolio?</h2>
+    <section class="faq faq-border">
+      <div class=" faq-display">
+        <h2 class="faq-question">Can I use Frontend Mentor projects in my portfolio?</h2>
+        <object class="faq-btn" data="./assets/images/icon-plus.svg" type="image/svg+xml"></object>
+      </div>
       <p class="faq-answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
         way to showcase your skills to potential employers!</p>
     </section>
 
     <section class="faq">
-      <h2 class="faq-question">How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
+      <div class="faq-display">
+        <h2 class="faq-question">How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
+        <object class="faq-btn" data="./assets/images/icon-plus.svg" type="image/svg+xml"></object>
+      </div>
       <p class="faq-answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
         channel where you can ask questions and seek support from other community members.</p>
     </section>
