--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Frontend Mentor | FAQ accordion</title>
 
 </head>
-<body>
 
+<body>
   <main class="container">
 
     <div class="accordion">
@@ -23,8 +23,8 @@
     <section class="faq faq-border">
       <div class=" faq-display">
         <h2 class="faq-question">What is Frontend Mentor, and how will it help me?</h2>
-        <button type="button" class="faq-btn">
-          <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+        <button type="button" class="faq-btn" id="btn">
+          <img id="btn-img" class="faq-img__minus" src="./assets/images/icon-plus.svg" alt="icon-plus">
         </button>
       </div>
       <p class="faq-answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
