--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img src="./assets/images/icon-plus.svg" alt="icon-plus">
         </button>
       </div>  
-      <p class="faq-answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+      <p class="faq-answer" id="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
         option providing access to a range of projects suitable for all skill levels.</p>
     </section>
 
