--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img id="btn-img" class="faq-img__minus" src="./assets/images/icon-plus.svg" alt="icon-plus">
         </button>
       </div>
-      <p class="faq-answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
+      <p class="faq-answer " id="answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
         frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
         all levels and ideal for portfolio building.</p>
     </section>
@@ -39,7 +39,7 @@
           <img src="./assets/images/icon-plus.svg" alt="icon-plus">
         </button>
       </div>  
-      <p class="faq-answer" id="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+      <p class="faq-answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
         option providing access to a range of projects suitable for all skill levels.</p>
     </section>
 
