--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <div class=" faq-display">
         <h2 class="faq-question">What is Frontend Mentor, and how will it help me?</h2>
         <button type="button" class="faq-btn" id="btn">
-          <img id="btn-img" class="faq-img__minus" src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img id="btn-img" src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img id="btn-img-alt" src="./assets/images/icon-minus.svg" alt="icon-minus">
         </button>
       </div>
       <p class="faq-answer " id="answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
@@ -36,10 +37,11 @@
       <div class=" faq-display">
         <h2 class="faq-question">Is Frontend Mentor free?</h2>
         <button type="button" class="faq-btn">
-          <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img id="btn-img" src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img id="btn-img-alt" src="./assets/images/icon-minus.svg" alt="icon-minus">
         </button>
       </div>  
-      <p class="faq-answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+      <p class="faq-answer" id="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
         option providing access to a range of projects suitable for all skill levels.</p>
     </section>
 
@@ -47,21 +49,23 @@
       <div class=" faq-display">
         <h2 class="faq-question">Can I use Frontend Mentor projects in my portfolio?</h2>
         <button type="button" class="faq-btn">
-          <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img id="btn-img" src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img id="btn-img-alt" src="./assets/images/icon-minus.svg" alt="icon-minus">
         </button>
       </div>
-      <p class="faq-answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-        way to showcase your skills to potential employers!</p>
+      <p class="faq-answer" id="answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+      way to showcase your skills to potential employers!</p>
     </section>
 
     <section class="faq">
       <div class="faq-display">
         <h2 class="faq-question">How can I get help if I'm stuck on a challenge?</h2>
         <button type="button" class="faq-btn">
-          <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img id="btn-img" src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img id="btn-img-alt" src="./assets/images/icon-minus.svg" alt="icon-minus">
         </button>
       </div>
-      <p class="faq-answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+      <p class="faq-answer" id="answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
         channel where you can ask questions and seek support from other community members.</p>
     </section>
   </main>
