--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <div class=" faq-display">
         <h2 class="faq-question">What is Frontend Mentor, and how will it help me?</h2>
         <button type="button" class="faq-btn" id="btn">
-          <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img class="btn-img" src="./assets/images/icon-minus.svg" alt="icon-plus">
         </button>
       </div>
-      <p class="faq-answer" id="answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
+      <p class="faq-answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
         frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
         all levels and ideal for portfolio building.</p>
     </section>
@@ -36,10 +36,10 @@
       <div class=" faq-display">
         <h2 class="faq-question">Is Frontend Mentor free?</h2>
         <button type="button" class="faq-btn" id="btn">
-          <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img class="btn-img" src="./assets/images/icon-plus.svg" alt="icon-plus">
         </button>
       </div>  
-      <p class="faq-answer display-none" id="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+      <p class="faq-answer display-none">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
         option providing access to a range of projects suitable for all skill levels.</p>
     </section>
 
@@ -47,21 +47,21 @@
       <div class=" faq-display">
         <h2 class="faq-question">Can I use Frontend Mentor projects in my portfolio?</h2>
         <button type="button" class="faq-btn">
-          <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img class="btn-img" src="./assets/images/icon-plus.svg" alt="icon-plus">
         </button>
       </div>
-      <p class="faq-answer display-none" id="answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+      <p class="faq-answer display-none">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
       way to showcase your skills to potential employers!</p>
     </section>
 
-    <section class="faq">
+    <section class="faq padding-bottom">
       <div class="faq-display">
         <h2 class="faq-question">How can I get help if I'm stuck on a challenge?</h2>
         <button type="button" class="faq-btn">
-          <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+          <img class="btn-img" src="./assets/images/icon-plus.svg" alt="icon-plus">
         </button>
       </div>
-      <p class="faq-answer display-none" id="answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+      <p class="faq-answer display-none" >The best place to get help is inside Frontend Mentor's Discord community. There's a help 
         channel where you can ask questions and seek support from other community members.</p>
     </section>
   </main>
