--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
 
     <section class="faq faq-border">
-      <div class=" faq-display">
+      <div class="faq-display">
         <h2 class="faq-question">What is Frontend Mentor, and how will it help me?</h2>
-        <button type="button" class="faq-btn" id="btn">
+        <button type="button" class="faq-btn">
           <img class="btn-img" src="./assets/images/icon-minus.svg" alt="icon-plus">
         </button>
       </div>
@@ -35,7 +35,7 @@
     <section class="faq faq-border">
       <div class=" faq-display">
         <h2 class="faq-question">Is Frontend Mentor free?</h2>
-        <button type="button" class="faq-btn" id="btn">
+        <button type="button" class="faq-btn">
           <img class="btn-img" src="./assets/images/icon-plus.svg" alt="icon-plus">
         </button>
       </div>  
@@ -54,7 +54,7 @@
       way to showcase your skills to potential employers!</p>
     </section>
 
-    <section class="faq padding-bottom">
+    <section class="faq">
       <div class="faq-display">
         <h2 class="faq-question">How can I get help if I'm stuck on a challenge?</h2>
         <button type="button" class="faq-btn">
