add alt= in <object>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="container">
 
     <div class="accordion">
-      <object data="./assets/images/icon-star.svg" type="image/svg+xml"></object>
+      <object data="./assets/images/icon-star.svg" type="image/svg+xml" alt="Star-Purple"></object>
       <h1 class="accordion-title">FAQs</h1>
     </div>
 
