modified padding accordion

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       way to showcase your skills to potential employers!</p>
     </section>
 
-    <section class="faq">
+    <section class="faq padding-bottom">
       <div class="faq-display">
         <h2 class="faq-question">How can I get help if I'm stuck on a challenge?</h2>
         <button type="button" class="faq-btn">
